# vsdaw

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  biome.json  node_modules  package.json  tsconfig.json  tsconfig.test.json
.github/: review-instructions.md
archive/old-src/components/browser/: BrowserTree.tsx
archive/old-src/components/graph/: GraphView.tsx
archive/old-src/components/mixer/: Meter.tsx
archive/old-src/components/pianoRoll/: VelocityLane.tsx
archive/old-src/components/shared/: EmptyState.tsx  ErrorBoundary.tsx  PanelShell.tsx  ThemeProvider.tsx  Tooltip.tsx  ViewSwitcher.tsx  useTheme.ts
archive/old-src/components/timeline/: TimelineCanvas.tsx  TrackHeader.tsx
archive/old-src/components/transport/: TimeDisplay.tsx  TransportControls.tsx
archive/old-src/engine/: index.html  messageHandlers.ts  node-polyfill.ts  projectAdapter.ts
archive/old-src/engine/workers/: peakWorker.ts
archive/old-src/extension/: audioServer.ts  engineTransport.ts  extension.ts  projectManager.ts  server.ts  stateProjector.ts  types.ts  viewMessageAdapter.ts
archive/old-src/extension/editor/: vsdawEditor.ts
archive/old-src/extension/views/: base.ts  browser.ts  graph.ts  index.ts  mixer.ts  pianoRoll.ts  timeline.ts
archive/old-src/shared/: automation.ts  bundle.ts  peaks.ts  schemas.ts  time.ts
archive/old-src/views/: index.tsx
archive/old-src/views/graph/: main.tsx
archive/old-src/views/mixer/: main.tsx
archive/old-src/views/shared/: global.css  messageBus.ts  types.ts  vscodeApi.ts
docs/: ARCHITECTURE.md  decisions.md  parity-spec.md
engine/: CMakeLists.txt  CMakePresets.json
engine/src/: ChannelRack.cpp  ChannelRack.h  CommandQueue.cpp  CommandQueue.h  CommandServer.cpp  CommandServer.h  Engine.cpp  Engine.h  MeteringBus.cpp  MeteringBus.h  Mixer.cpp  Mixer.h  Pattern.cpp  Pattern.h  Playlist.cpp  Playlist.h  Project.cpp  Project.h  Transport.cpp  Transport.h  Types.h  main.cpp
engine/tests/: test_command_queue.cpp  test_metering.cpp  test_time.cpp  test_transport.cpp
engine/tests/integration/: engine-ping.test.ts
reviews/: issue-23-475832d.md  issue-23-e59fc6b.md  issue-6-2f8fe5b.md  issue-7-22e4065.md  pr-3.md
scripts/: build-engine.ts  build-integration-tests.mjs  build.ts  review-watcher.mjs  start-review-tmux.sh
specs/: 000-architecture.md  08-piano-roll-editing.md  09-mixer-routing.md  10-automation.md  11-audio-recording.md  12-arranger-polish.md  13-plugin-hosting.md  14-ux-view-switching-and-toolbar-actions.md  15-ui-design-system-and-coherence.md  16-master-audit-and-roadmap.md  17-standalone-app-architecture.md  18-monorepo-and-build-system.md  19-shared-protocol-and-schemas.md  20-juce-audio-engine-foundation.md  21-plugin-hosting-and-scanner.md  22-project-model-and-singularity-bundle-format.md  23-backend-api-server-fastify-websocket-engine-bridge.md  24-design-system-and-vs-code-theme-integration.md  25-dockview-layout-and-shell-panels.md  26-channel-rack-and-step-sequencer.md  27-piano-roll.md  28-playlist-and-arrangement.md  29-mixer-and-routing-graph.md  30-browser-plugin-database-and-presets.md  31-stock-instruments-and-effects.md  32-audio-recording-and-editing.md  33-automation-midi-and-transport.md  34-export-rendering-and-ai-mastering.md  35-ai-agent-system-cli-mcp-terminal-browser-monaco-ide.md  TEMPLATE.md
src/components/browser/: BrowserTree.tsx
src/components/device/: DevicePanel.tsx
src/components/mixer/: MixerStrip.tsx
src/components/pianoRoll/: PianoRollGrid.tsx
src/components/shared/: Toolbar.tsx
src/components/timeline/: TimelineCanvas.tsx  TrackColumnHeader.tsx  TrackHeader.tsx
src/engine/: engine.ts  messageHandlers.ts  projectAdapter.ts
src/extension/: commands.ts  messageRouter.ts  playwrightEngine.ts  projectManager.ts  stateProjector.ts  types.ts  undoManager.ts  viewMessageAdapter.ts
src/shared/: midi.ts  protocol.ts
src/views/browser/: main.tsx
src/views/mixer/: main.tsx
src/views/pianoRoll/: main.tsx
src/views/shared/: types.ts  useViewState.ts
src/views/timeline/: main.tsx
tests/__mocks__/: vscode.ts
tests/integration/: saveLoadRoundTrip.test.ts
tests/integration/workspace/: Untitled.vsdaw
tests/unit/: commands.test.ts  export.test.ts  import.test.ts  messageHandlers.test.ts  midi.test.ts  playwrightEngine.test.ts  stateProjector.test.ts  undoManager.test.ts  viewMessageAdapter.test.ts
